--- a/back/package.json
+++ b/back/package.json
@@ -26,14 +26,15 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/swagger": "^5.0.8",
-    "@nestjs/typeorm": "^8.0.1",
+    "@nestjs/swagger": "^4.8.2",
+    "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34"
   },
   "devDependencies": {
