--- a/back/package.json
+++ b/back/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "express-session": "^1.17.2",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
@@ -53,6 +54,7 @@
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "@types/passport-local": "^1.0.34",
