--- a/front/package.json
+++ b/front/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^15.12.4",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.0",
