--- a/back/package.json
+++ b/back/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "dayjs": "^1.10.6",
     "dotenv": "^8.2.0",
     "express-session": "^1.17.2",
     "multer": "^1.4.2",
