--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.8",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "@videojs/themes": "^1.0.1",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
@@ -34,6 +35,7 @@
     "swr": "^0.5.6",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4",
+    "video.js": "^7.14.3",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-dev-server": "^3.11.1"
   },
@@ -44,6 +46,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^15.12.4",
+    "@types/video.js": "^7.3.26",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.0",
     "@types/webpack-dev-server": "^3.11.1",
