--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.2.0",
     "react-quill": "^1.3.5",
     "react-refresh": "^0.10.0",
+    "react-responsive": "^9.0.0-beta.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "swr": "^0.5.6",
