--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-image-crop": "^9.0.3",
     "react-quill": "^1.3.5",
     "react-refresh": "^0.10.0",
     "react-responsive": "^9.0.0-beta.3",
