--- a/back/package.json
+++ b/back/package.json
@@ -24,14 +24,14 @@
     "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "^1.0.1",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/swagger": "^4.8.2",
-    "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/config": "^1.1.6",
+    "@nestjs/core": "^8.2.6",
+    "@nestjs/mapped-types": "^1.0.1",
+    "@nestjs/passport": "^8.1.0",
+    "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/swagger": "^5.1.5",
+    "@nestjs/typeorm": "^8.0.3",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
@@ -46,7 +46,7 @@
     "pm2": "^5.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.5.2",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34",
     "typeorm-seeding": "^1.6.1"
