--- a/back/package.json
+++ b/back/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.3",
     "@types/multer": "^1.4.7",
+    "@types/passport-kakao": "^0.2.1",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
@@ -42,6 +43,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "pm2": "^5.1.0",
     "reflect-metadata": "^0.1.13",
