--- a/back/package.json
+++ b/back/package.json
@@ -34,6 +34,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "@types/multer": "^1.4.7",
     "@types/passport-kakao": "^0.2.1",
+    "@types/passport-naver": "^0.2.1",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
@@ -45,6 +46,7 @@
     "passport": "^0.4.1",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
     "pm2": "^5.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
